Java: include fields and inner classes when grouping by defining type in structure view (IDEA-169975)
GitOrigin-RevId: 930abc712605034fd916a7dff69a95d8ddb12299