@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.java.structureView;
 
 import com.intellij.ide.structureView.impl.java.*;
@@ -61,8 +61,8 @@ public class JavaStructureViewTest extends LightJavaStructureViewTestCaseBase {
     JBTreeTraverser<AbstractTreeNode<?>> traverser = JBTreeTraverser.from(AbstractTreeNode::getChildren);
     List<AbstractTreeNode<?>> roots = new ArrayList<>();
     for (Object element : getElements()) {
-      if (element instanceof AbstractTreeNode) {
-        roots.add((AbstractTreeNode<?>)element);
+      if (element instanceof AbstractTreeNode<?> node) {
+        roots.add(node);
       }
     }
     return traverser.withRoots(roots)
@@ -84,7 +84,7 @@ public class JavaStructureViewTest extends LightJavaStructureViewTestCaseBase {
     TreeElementWrapper last = (TreeElementWrapper)elements[elements.length - 1];
     Collection<AbstractTreeNode<?>> children = last.getChildren();
     assertEquals(1, children.size());
-    assertEquals(3, ((AbstractTreeNode<?>)((List<?>)children).get(0)).getChildren().size());
+    assertEquals(3, ((AbstractTreeNode<?>)((List<?>)children).getFirst()).getChildren().size());
   }
 
   private Object[] getElements() {
@@ -115,11 +115,13 @@ public class JavaStructureViewTest extends LightJavaStructureViewTestCaseBase {
   public void testSuperTypeGrouping() {
     doTest("""
              abstract class Abstract {
-             abstract void toImplement();
-             void toOverride(){}}
+               abstract void toImplement();
+               void toOverride(){}
+             }
              class aClass extends Abstract {
-             void toImplement(){};
-             void toOverride(){};}""",
+               void toImplement(){};
+               void toOverride(){};
+             }""",
 
            """
              -Test.java
@@ -131,7 +133,77 @@ public class JavaStructureViewTest extends LightJavaStructureViewTestCaseBase {
                 toImplement(): void
                -Abstract
                 toOverride(): void"""
-      , true, false);
+      , true, false, false);
+  }
+
+  public void testSuperTypeGrouping2() {
+    doTest("""
+             abstract class Abstract {
+               int field;
+               class Inner {}
+             }
+             class aClass extends Abstract {
+               int moreField;
+             }""",
+
+           """
+             -Test.java
+              -Abstract
+               -Inner
+                -Object
+                 getClass(): Class<?>
+                 hashCode(): int
+                 equals(Object): boolean
+                 clone(): Object
+                 toString(): String
+                 notify(): void
+                 notifyAll(): void
+                 wait(long): void
+                 wait(long, int): void
+                 wait(): void
+                 finalize(): void
+               -Object
+                getClass(): Class<?>
+                hashCode(): int
+                equals(Object): boolean
+                clone(): Object
+                toString(): String
+                notify(): void
+                notifyAll(): void
+                wait(long): void
+                wait(long, int): void
+                wait(): void
+                finalize(): void
+               field: int
+              -aClass
+               -Abstract
+                -Inner
+                 getClass(): Class<?>
+                 hashCode(): int
+                 equals(Object): boolean
+                 clone(): Object
+                 toString(): String
+                 notify(): void
+                 notifyAll(): void
+                 wait(long): void
+                 wait(long, int): void
+                 wait(): void
+                 finalize(): void
+                field: int
+               -Object
+                getClass(): Class<?>
+                hashCode(): int
+                equals(Object): boolean
+                clone(): Object
+                toString(): String
+                notify(): void
+                notifyAll(): void
+                wait(long): void
+                wait(long, int): void
+                wait(): void
+                finalize(): void
+               moreField: int"""
+      , true, false, true);
   }
 
   public void testPropertiesGrouping1() {
@@ -368,10 +440,11 @@ public class JavaStructureViewTest extends LightJavaStructureViewTestCaseBase {
   }
 
   public void testRecursive() {
-    myFixture.configureByText("I.java", "interface I {" +
-                                        "  class Impl implements I {" +
-                                        "  }" +
-                                        "};");
+    myFixture.configureByText("I.java", """
+      interface I {
+        class Impl implements I {
+        }
+      }""");
     myFixture.testStructureView(component -> {
       component.setActionActive(InheritedMembersNodeProvider.ID, true);
       PlatformTestUtil.assertTreeEqual(component.getTree(),
@@ -690,21 +763,23 @@ public class JavaStructureViewTest extends LightJavaStructureViewTestCaseBase {
   }
 
   private void doTest(String classText, @Language("TEXT") String expected) {
-    doTest(classText, expected, false, false);
+    doTest(classText, expected, false, false, false);
   }
 
   private void doPropertiesTest(String classText, String expected) {
-    doTest(classText, expected, false, true);
+    doTest(classText, expected, false, true, false);
   }
 
   private void doTest(String classText,
                       String expected,
                       boolean showInterfaces,
-                      boolean showProperties) {
+                      boolean showProperties,
+                      boolean showInherited) {
     myFixture.configureByText("Test.java", classText);
     myFixture.testStructureView(svc -> {
       svc.setActionActive(SuperTypesGrouper.ID, showInterfaces);
       svc.setActionActive(PropertiesGrouper.ID, showProperties);
+      svc.setActionActive(InheritedMembersNodeProvider.ID, showInherited);
       svc.setActionActive(JavaAnonymousClassesNodeProvider.ID, true);
       JTree tree = svc.getTree();
       PlatformTestUtil.waitWhileBusy(tree);
